more about kinetics

--- a/software/docs/energy_storage.bib
+++ b/software/docs/energy_storage.bib
@@ -502,44 +502,6 @@
 	file = {Snapshot:/home/ali/Zotero/storage/7Y882Y55/hystorpor.html:text/html}
 }
 
-@article{frei_methanol_2020,
-	title = {Methanol as a {Hydrogen} {Carrier}: {Kinetic} and {Thermodynamic} {Drivers} for its {CO2}-{Based} {Synthesis} and {Reforming} over {Heterogeneous} {Catalysts}},
-	volume = {n/a},
-	issn = {1864-5631},
-	shorttitle = {Methanol as a {Hydrogen} {Carrier}},
-	url = {https://chemistry-europe.onlinelibrary.wiley.com/doi/10.1002/cssc.202001518},
-	doi = {10.1002/cssc.202001518},
-	abstract = {Abstract Methanol is an attractive energy vector in a closed loop including its synthesis from CO2 and H2 and on-demand reforming to the starting feedstocks. Catalytic materials for the two reactions were mostly studied separately, with very few works assessing the feasibility of the same system for both. Here, key kinetic drivers of methanol synthesis (MS) and methanol steam reforming (MSR) were identified for the main catalyst families, with special focus on Cu?ZnO?Al2O3, In2O3, and Pd/ZrO2. It was shown that the relative activity level was preserved in either direction, whereas the distinctly favored (reverse) water-gas shift modulated selectivity differently. Low selectivity in kinetically controlled MS could be overcome in MSR by exploiting thermodynamics as the driving force, with many catalysts unfit for MS still comprising appealing candidates for MSR and only few being suited for MS as well as MSR. Overall, readily identifiable properties describing catalyst behavior in the forward and backward reactions were highlighted, effectively linking research in the two fields and setting a stronger basis for developing a methanol-based hydrogen storage unit with a single reactor.},
-	number = {n/a},
-	urldate = {2020-08-08},
-	journal = {ChemSusChem},
-	author = {Frei, Matthias S. and Mondelli, Cecilia and Short, Marion I. M. and Pérez-Ramírez, Javier},
-	month = jul,
-	year = {2020},
-	note = {Publisher: John Wiley \& Sons, Ltd},
-	keywords = {carbon dioxide, heterogeneous catalysis, hydrogen, methanol steam reforming, methanol synthesis},
-	file = {Snapshot:/home/ali/Zotero/storage/ZXQHGVAE/cssc.html:text/html}
-}
-
-@article{frei_methanol_2020-1,
-	title = {Methanol as a {Hydrogen} {Carrier}: {Kinetic} and {Thermodynamic} {Drivers} for its {CO2}-{Based} {Synthesis} and {Reforming} over {Heterogeneous} {Catalysts}},
-	volume = {n/a},
-	issn = {1864-5631},
-	shorttitle = {Methanol as a {Hydrogen} {Carrier}},
-	url = {https://chemistry-europe-onlinelibrary-wiley-com.proxy.findit.dtu.dk/doi/full/10.1002/cssc.202001518},
-	doi = {10.1002/cssc.202001518},
-	abstract = {Abstract Methanol is an attractive energy vector in a closed loop including its synthesis from CO2 and H2 and on-demand reforming to the starting feedstocks. Catalytic materials for the two reactions were mostly studied separately, with very few works assessing the feasibility of the same system for both. Here, key kinetic drivers of methanol synthesis (MS) and methanol steam reforming (MSR) were identified for the main catalyst families, with special focus on Cu?ZnO?Al2O3, In2O3, and Pd/ZrO2. It was shown that the relative activity level was preserved in either direction, whereas the distinctly favored (reverse) water-gas shift modulated selectivity differently. Low selectivity in kinetically controlled MS could be overcome in MSR by exploiting thermodynamics as the driving force, with many catalysts unfit for MS still comprising appealing candidates for MSR and only few being suited for MS as well as MSR. Overall, readily identifiable properties describing catalyst behavior in the forward and backward reactions were highlighted, effectively linking research in the two fields and setting a stronger basis for developing a methanol-based hydrogen storage unit with a single reactor.},
-	number = {n/a},
-	urldate = {2020-08-08},
-	journal = {ChemSusChem},
-	author = {Frei, Matthias S. and Mondelli, Cecilia and Short, Marion I. M. and Pérez-Ramírez, Javier},
-	month = jul,
-	year = {2020},
-	note = {Publisher: John Wiley \& Sons, Ltd},
-	keywords = {carbon dioxide, heterogeneous catalysis, hydrogen, methanol steam reforming, methanol synthesis},
-	file = {Snapshot:/home/ali/Zotero/storage/W65P8HU2/cssc.html:text/html}
-}
-
 @article{babic_critical_2017,
 	title = {Critical {Review}—{Identifying} {Critical} {Gaps} for {Polymer} {Electrolyte} {Water} {Electrolysis} {Development}},
 	volume = {164},
@@ -1266,4 +1228,238 @@ In this thesis, the thermodynamics and electrochemistry associated with water el
 	author = {Hagoort, Jacques},
 	year = {1988},
 	file = {Snapshot:/home/ali/Zotero/storage/CM5LIVP9/books.html:text/html}
+}
+
+@article{frei_methanol_2020,
+	title = {Methanol as a {Hydrogen} {Carrier}: {Kinetic} and {Thermodynamic} {Drivers} for its {CO2}-{Based} {Synthesis} and {Reforming} over {Heterogeneous} {Catalysts}},
+	volume = {13},
+	issn = {1864-5631},
+	shorttitle = {Methanol as a {Hydrogen} {Carrier}},
+	url = {https://chemistry-europe-onlinelibrary-wiley-com.proxy.findit.dtu.dk/doi/full/10.1002/cssc.202001518},
+	doi = {10.1002/cssc.202001518},
+	abstract = {Abstract Methanol is an attractive energy vector in a closed loop including its synthesis from CO2 and H2 and on-demand reforming to the starting feedstocks. Catalytic materials for the two reactions were mostly studied separately, with very few works assessing the feasibility of the same system for both. Here, key kinetic drivers of methanol synthesis (MS) and methanol steam reforming (MSR) were identified for the main catalyst families, with special focus on Cu?ZnO?Al2O3, In2O3, and Pd/ZrO2. It was shown that the relative activity level was preserved in either direction, whereas the distinctly favored (reverse) water-gas shift modulated selectivity differently. Low selectivity in kinetically controlled MS could be overcome in MSR by exploiting thermodynamics as the driving force, with many catalysts unfit for MS still comprising appealing candidates for MSR and only few being suited for MS as well as MSR. Overall, readily identifiable properties describing catalyst behavior in the forward and backward reactions were highlighted, effectively linking research in the two fields and setting a stronger basis for developing a methanol-based hydrogen storage unit with a single reactor.},
+	number = {23},
+	urldate = {2021-01-06},
+	journal = {ChemSusChem},
+	author = {Frei, Matthias S. and Mondelli, Cecilia and Short, Marion I. M. and Pérez-Ramírez, Javier},
+	month = dec,
+	year = {2020},
+	note = {Publisher: John Wiley \& Sons, Ltd},
+	keywords = {carbon dioxide, heterogeneous catalysis, hydrogen, methanol steam reforming, methanol synthesis},
+	pages = {6330--6337},
+	file = {Frei et al_2020_Methanol as a Hydrogen Carrier.pdf:/home/ali/Dropbox/Zotero/Frei et al_2020_Methanol as a Hydrogen Carrier.pdf:application/pdf}
+}
+
+@article{luo_exergy_2017,
+	title = {Exergy {Efficiency} {Analysis} of a {Power}-to-{Methane} {System} {Coupling} {Water} {Electrolysis} and {Sabatier} {Reaction}},
+	volume = {78},
+	issn = {1938-5862},
+	url = {https://iopscience-iop-org.proxy.findit.dtu.dk/article/10.1149/07801.2965ecst/meta},
+	doi = {10.1149/07801.2965ecst},
+	language = {en},
+	number = {1},
+	urldate = {2021-01-06},
+	journal = {ECS Transactions},
+	author = {Luo, Yu and Wu, Xiao-Yu and Shi, Yixiang and Ghoniem, Ahmed F. and Cai, Ningsheng},
+	month = may,
+	year = {2017},
+	note = {Publisher: IOP Publishing},
+	pages = {2965},
+	file = {Luo et al_2017_Exergy Efficiency Analysis of a Power-to-Methane System Coupling Water.pdf:/home/ali/Dropbox/Zotero/Luo et al_2017_Exergy Efficiency Analysis of a Power-to-Methane System Coupling Water.pdf:application/pdf;Snapshot:/home/ali/Zotero/storage/54TZ4U44/07801.html:text/html}
+}
+
+@article{guerra_methane_2018,
+	title = {Methane production by a combined {Sabatier} reaction/water electrolysis process},
+	volume = {6},
+	issn = {2213-3437},
+	url = {http://www.sciencedirect.com/science/article/pii/S2213343717307054},
+	doi = {10.1016/j.jece.2017.12.066},
+	abstract = {This paper describes production of synthesis gas (syngas) and its optimization through a one-step innovative 1 kW prototype of alkaline water electrolysis (patented), using graphite electrodes and without gas separation (containing CO, CO2, H2 and small amounts of O2). The behavior of the syngas composition and flow rate has been studied and optimized, changing operational parameters such as temperature, pressure and current intensity, and testing two different kinds of electrodes. Afterwards, the best syngas composition has been sent into a catalytic reactor (filled with a bed of Ni/CaO-Al2O3 catalyst) in order to achieve methane production, at 1 bar and different temperatures. The main competitive advantage of this process lies in the built-in of an innovative technology product, from renewable energy (RE) power in remote locations, such as islands, villages in mountains as an alternative for energy storage for mobility constraints. In the catalytic reactor it was possible to achieve a CH4 yield of 25.5 \%, a CO2 conversion into CH4 of 44.2\% and a CH4 selectivity of 96.5\%.},
+	language = {en},
+	number = {1},
+	urldate = {2021-01-06},
+	journal = {Journal of Environmental Chemical Engineering},
+	author = {Guerra, L. and Rossi, S. and Rodrigues, J. and Gomes, J. and Puna, J. and Santos, M. T.},
+	month = feb,
+	year = {2018},
+	keywords = {Water electrolysis, Renewable energy, Electrochemical process, Sabatier reaction, Syngas},
+	pages = {671--676},
+	file = {Guerra et al_2018_Methane production by a combined Sabatier reaction-water electrolysis process.pdf:/home/ali/Dropbox/Zotero/Guerra et al_2018_Methane production by a combined Sabatier reaction-water electrolysis process.pdf:application/pdf;ScienceDirect Snapshot:/home/ali/Zotero/storage/PCMCG87E/S2213343717307054.html:text/html}
+}
+
+@misc{noauthor_study_nodate,
+	title = {Study for the reduction of carbon dioxide using {Sabatier} reaction {\textbar} {International} {Conference} on {Environmental} {Systems} ({ICES})},
+	url = {https://arc.aiaa.org/doi/abs/10.2514/6.2010-6271},
+	language = {en},
+	urldate = {2021-01-06},
+	doi = {10.2514/6.2010-6271},
+	note = {Archive Location: world},
+	file = {Snapshot:/home/ali/Zotero/storage/QZ5AFH4N/6.html:text/html;Study for the reduction of carbon dioxide using Sabatier reaction.pdf:/home/ali/Dropbox/Zotero/Study for the reduction of carbon dioxide using Sabatier reaction.pdf:application/pdf}
+}
+
+@article{sun_thermal_2017,
+	title = {Thermal management of a {Sabatier} reactor for {CO2} conversion into {CH4}: {Simulation}-based analysis},
+	volume = {21},
+	issn = {2212-9820},
+	shorttitle = {Thermal management of a {Sabatier} reactor for {CO2} conversion into {CH4}},
+	url = {http://www.sciencedirect.com/science/article/pii/S2212982016303614},
+	doi = {10.1016/j.jcou.2017.07.015},
+	abstract = {Converting CO2-rich waste streams such as raw biogas, landfill gas and power plant flue gas into synthetic fuels and chemicals will reduce greenhouse gas emissions, providing revenue at the same time. One option is to convert CO2 into CH4 by hydrogenation via Sabatier reaction. This synthetic methane will be renewable if the H2 required for the reaction is generated via water electrolysis using solar and wind energy or hydroelectricity. However, to realize the potential of this approach, a number of technological challenges related to the Sabatier reactor design have to be resolved, including thermal management. The high exothermicity of the Sabatier reaction can lead to reactor overheating. High temperatures are unfavorable to the exothermic and reversible methanation process, resulting in low CO2 conversions. A simulation-based study of a Sabatier reactor was performed in order to optimize the removal of heat, while maximizing CO2 conversion and CH4 production. The heat-exchanger type packed bed reactor with internal cooling by a molten salt was simulated using a transient, pseudo-homogeneous mathematical model. Reactor performance was evaluated in terms of CO2 conversion and CH4 yield. The simulation results show that feed temperature, feed flow rate, and molten salt flow rate are the crucial parameters affecting the reactor performance. For the optimized operating conditions, the model predicts CO2 conversions and CH4 yields above 90\% at high reactor throughputs, with space velocities up to 10,000h−1. A preliminary techno-economic evaluation is provided: opportunities and challenges are outlined.},
+	language = {en},
+	urldate = {2021-01-06},
+	journal = {Journal of CO2 Utilization},
+	author = {Sun, Duo and Simakov, David S. A.},
+	month = oct,
+	year = {2017},
+	keywords = {CO, Molten salt, Renewable natural gas, Sabatier reactor},
+	pages = {368--382},
+	file = {ScienceDirect Snapshot:/home/ali/Zotero/storage/5ZUPCJCW/S2212982016303614.html:text/html;Sun_Simakov_2017_Thermal management of a Sabatier reactor for CO2 conversion into CH4.pdf:/home/ali/Dropbox/Zotero/Sun_Simakov_2017_Thermal management of a Sabatier reactor for CO2 conversion into CH4.pdf:application/pdf}
+}
+
+@article{rodriguez_two_2012,
+	series = {Proceedings of the 10th {International} {Conference} on {Catalysis} in {Membrane} {Reactors}},
+	title = {Two dimensional modeling of a membrane reactor for {ATR} of methane},
+	volume = {193},
+	issn = {0920-5861},
+	url = {http://www.sciencedirect.com/science/article/pii/S0920586112002829},
+	doi = {10.1016/j.cattod.2012.04.010},
+	abstract = {A theoretical study of a multitubular membrane reactor for the autothermal reforming of methane over a Ni/Al2O3 catalyst is presented. A 2-D model is selected to account for the strong composition and temperature gradients along the axial and radial coordinates. The effect of the degree of reduction of the Ni catalyst on the reforming reaction rates is taken into account in the model. The influence of the main operating conditions on the reactor behavior is studied. The results suggest that the membrane reactor is a promising alternative to carry out ATR of methane at milder conditions than those commonly found in a conventional reactor. The axial distribution of the O2 fed to the reactor is a powerful tool to influence the axial temperature profiles. Nevertheless, a careful design is necessary to avoid risky conditions such as oxygen accumulation in the tubes.},
+	language = {en},
+	number = {1},
+	urldate = {2021-01-06},
+	journal = {Catalysis Today},
+	author = {Rodríguez, M. L. and Pedernera, M. N. and Borio, D. O.},
+	month = oct,
+	year = {2012},
+	keywords = {Methane, 2-D model, Autothermal reforming, Membrane reactor, Oxygen distribution, Porous membrane},
+	pages = {137--144},
+	file = {Rodríguez et al_2012_Two dimensional modeling of a membrane reactor for ATR of methane.pdf:/home/ali/Dropbox/Zotero/Rodríguez et al_2012_Two dimensional modeling of a membrane reactor for ATR of methane.pdf:application/pdf}
+}
+
+@article{quach_kinetics_1976,
+	title = {Kinetics of the reaction between carbon dioxide and hydrogen over a ruthenium catalyst in a continuous stirred tank reactor},
+	volume = {26},
+	copyright = {Copyright © 1976 John Wiley \& Sons, Ltd},
+	issn = {1935-0554},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/jctb.5020260175},
+	doi = {https://doi.org/10.1002/jctb.5020260175},
+	abstract = {The catalytic reaction between carbon dioxide and hydrogen over a surface coated ruthenium catalyst was investigated in a stirred tank reactor, under isothermal conditions from 200 to 300°C. The kinetic data obtained were analysed by the Hougen-Watson method. Non-linear least squares analysis was used to discriminate among 28 rate models. The following Hougen-Watson type rate equation was selected.},
+	language = {en},
+	number = {1},
+	urldate = {2021-01-06},
+	journal = {Journal of Applied Chemistry and Biotechnology},
+	author = {Quach, Thi Quy Phung and Rouleau, Denis},
+	year = {1976},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/jctb.5020260175},
+	pages = {527--535},
+	file = {Quach_Rouleau_1976_Kinetics of the reaction between carbon dioxide and hydrogen over a ruthenium.pdf:/home/ali/Dropbox/Zotero/Quach_Rouleau_1976_Kinetics of the reaction between carbon dioxide and hydrogen over a ruthenium.pdf:application/pdf;Snapshot:/home/ali/Zotero/storage/T6QSETKE/jctb.html:text/html}
+}
+
+@article{reichelt_zur_1972,
+	title = {Zur {Berechnung} des {Druckverlustes} einphasig durchströmter {Kugel}- und {Zylinderschüttungen}},
+	volume = {44},
+	copyright = {Copyright © 1972 Verlag Chemie, GmbH},
+	issn = {1522-2640},
+	url = {http://onlinelibrary.wiley.com/doi/abs/10.1002/cite.330441806},
+	doi = {https://doi.org/10.1002/cite.330441806},
+	abstract = {Es werden Gleichungen zur Berechnung des Druckverlustes einphasig durchströmter Kugel- und Zylinderschüttungen angegeben. Die Gleichungen sind aus fremden und eigenen Messungen an Schüttungen abgeleitet, bei denen das Verhältnis von Rohrbzw. Säulendurchmesser D zu Füllkörperdurchmesser d in weiten Grenzen variiert wurde (1,7 {\textless} D/d {\textless} 91 für Kugeln; 2, 1 {\textless} D/d {\textless} 40 für Zylinder). Die Einflüsse der Schüttungsberandungen auf den Druckverlust werden berücksichtigt.},
+	language = {de},
+	number = {18},
+	urldate = {2021-01-06},
+	journal = {Chemie Ingenieur Technik},
+	author = {Reichelt, Wolfgang},
+	year = {1972},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/cite.330441806},
+	pages = {1068--1071},
+	file = {Reichelt_1972_Zur Berechnung des Druckverlustes einphasig durchströmter Kugel- und.pdf:/home/ali/Dropbox/Zotero/Reichelt_1972_Zur Berechnung des Druckverlustes einphasig durchströmter Kugel- und.pdf:application/pdf}
+}
+
+@article{loder_reaction_2020,
+	title = {The reaction kinetics of {CO2} methanation on a bifunctional {Ni}/{MgO} catalyst},
+	volume = {85},
+	issn = {1226-086X},
+	url = {http://www.sciencedirect.com/science/article/pii/S1226086X20300617},
+	doi = {10.1016/j.jiec.2020.02.001},
+	abstract = {A bifunctional Ni/MgO catalyst was prepared to catalyze CO2 methanation and make use of CO2 as an abundant hydrogen storage facility. The effect of Ni loading and MgO quality on the rate of methanation was tested in a temperature range of 533–648K. The Ni loading was varied between 0 to 27wt.\% on MgO. To investigate the impact of matrix elements, a MgO/CaO support was tested with 21wt.\% nickel loading. Further, the role of MgO in the bifunctional catalyst was proven. The reaction kinetics was modeled with a Langmuir–Hinshelwood approach considering the bifunctional character of the catalyst. Nickel provides the adsorbent capacity for hydrogen and is highly selective for methane. MgO activates CO2 through chemisorption. Increasing Ni loading of the catalyst increased the rate of CO2 conversion. According to the results, the mechanism of CO2 methanation did not change with Ni loading. The Ni/MgO catalyst acted as a robust, active and highly selective catalyst for CO2 methanation. With CO2 conversion of 87\%, the selectivity to methane was ≥99\%. Besides excellent catalytic activity the catalysts suffice the necessity of simple catalyst preparation, usage and recyclability for industrial applicability of CO2 methanation.},
+	language = {en},
+	urldate = {2021-01-06},
+	journal = {Journal of Industrial and Engineering Chemistry},
+	author = {Loder, A. and Siebenhofer, M. and Lux, S.},
+	month = may,
+	year = {2020},
+	keywords = {CO methanation, Kinetics, Langmuir–Hinshelwood, Ni/MgO catalyst},
+	pages = {196--207},
+	file = {Loder et al_2020_The reaction kinetics of CO2 methanation on a bifunctional Ni-MgO catalyst.pdf:/home/ali/Dropbox/Zotero/Loder et al_2020_The reaction kinetics of CO2 methanation on a bifunctional Ni-MgO catalyst.pdf:application/pdf;ScienceDirect Snapshot:/home/ali/Zotero/storage/3MC8JSQH/S1226086X20300617.html:text/html}
+}
+
+@article{schlereth_fixed-bed_2014,
+	series = {{ECCE9} – 9th {European} {Congress} of {Chemical} {Engineering}},
+	title = {A fixed-bed reactor modeling study on the methanation of {CO2}},
+	volume = {92},
+	issn = {0263-8762},
+	url = {http://www.sciencedirect.com/science/article/pii/S0263876213005054},
+	doi = {10.1016/j.cherd.2013.11.014},
+	abstract = {The methanation of carbon dioxide has gained renewed interest during the last years as a possible technology to synthesize a feasible chemical energy carrier. This modeling study aims at a basic understanding of the aspects relevant for designing an externally cooled fixed-bed reactor for the methanation of a pure, stoichiometric feed gas. It is shown that the reaction rates and the exothermicity (ΔH°=−165kJ/mol) prevent a fixed-bed reactor of technical dimensions to be operated at high conversions without runaway of the reactor. The model predictions of differently detailed pseudo-homogeneous reactor models and a heterogeneous reactor model where the intraparticle transport of mass is described according to a dusty-gas approach are compared to assess the needed level of detail in terms of modeling the heat transfer, fluid flow characteristics and transport resistances on the pellet scale. Under specific conditions, intraparticle mass transfer and external heat transfer need to be considered for describing the temperature and concentration profiles adequately. The study is completed by modeling a fixed-bed membrane reactor as an example of a structured reactor that offers improved temperature control by separated and controlled feeding of hydrogen and carbon dioxide.},
+	language = {en},
+	number = {4},
+	urldate = {2021-01-06},
+	journal = {Chemical Engineering Research and Design},
+	author = {Schlereth, David and Hinrichsen, Olaf},
+	month = apr,
+	year = {2014},
+	keywords = {Carbon dioxide, Methanation, Sabatier reaction, Dusty-gas model, Reactor design, Reactor modeling},
+	pages = {702--712},
+	file = {Schlereth_Hinrichsen_2014_A fixed-bed reactor modeling study on the methanation of CO2.pdf:/home/ali/Dropbox/Zotero/Schlereth_Hinrichsen_2014_A fixed-bed reactor modeling study on the methanation of CO2.pdf:application/pdf;ScienceDirect Snapshot:/home/ali/Zotero/storage/69N5RLWY/S0263876213005054.html:text/html}
+}
+
+@article{noauthor_kinetics_1973,
+	title = {Kinetics of the methanation of {CO} and {CO2} on a nickel catalyst},
+	volume = {28},
+	issn = {0021-9517},
+	url = {https://www-sciencedirect-com.proxy.findit.dtu.dk/science/article/pii/0021951773901322},
+	doi = {10.1016/0021-9517(73)90132-2},
+	abstract = {The kinetics of the methanation of CO2 in H2 on a supported nickel catalyst have been measured at partial pressures of CO2 below 0.02 atm and at atmos…},
+	language = {en},
+	number = {3},
+	urldate = {2021-01-06},
+	journal = {Journal of Catalysis},
+	month = mar,
+	year = {1973},
+	note = {Publisher: Academic Press},
+	pages = {391--402},
+	file = {1973_Kinetics of the methanation of CO and CO2 on a nickel catalyst.pdf:/home/ali/Dropbox/Zotero/1973_Kinetics of the methanation of CO and CO2 on a nickel catalyst.pdf:application/pdf;Snapshot:/home/ali/Zotero/storage/79DBEUPH/0021951773901322.html:text/html}
+}
+
+@article{noauthor_rates_1973,
+	title = {Rates of methane formation from carbon dioxide and hydrogen over a ruthenium catalyst},
+	volume = {30},
+	issn = {0021-9517},
+	url = {https://www-sciencedirect-com.proxy.findit.dtu.dk/science/article/pii/0021951773901590},
+	doi = {10.1016/0021-9517(73)90159-0},
+	abstract = {The Sabatier Reaction, 4H2 + CO2 2H2O + CH4 + 43 kcal was examined experimentally at 1 atm using a 0.5\% ruthenium on alumina catalyst. Data are given …},
+	language = {en},
+	number = {3},
+	urldate = {2021-01-06},
+	journal = {Journal of Catalysis},
+	month = sep,
+	year = {1973},
+	note = {Publisher: Academic Press},
+	pages = {423--429},
+	file = {1973_Rates of methane formation from carbon dioxide and hydrogen over a ruthenium.pdf:/home/ali/Dropbox/Zotero/1973_Rates of methane formation from carbon dioxide and hydrogen over a ruthenium.pdf:application/pdf;Snapshot:/home/ali/Zotero/storage/LGA9LMXY/0021951773901590.html:text/html}
+}
+
+@article{dopffel_microbial_2021,
+	title = {Microbial side effects of underground hydrogen storage – {Knowledge} gaps, risks and opportunities for successful implementation},
+	issn = {0360-3199},
+	url = {http://www.sciencedirect.com/science/article/pii/S0360319920345936},
+	doi = {10.1016/j.ijhydene.2020.12.058},
+	abstract = {As the use of hydrogen gas (H2) as a renewable energy carrier experiences a major boost, one of the key challenges for a constant supply is safe and cost-efficient storage of surplus H2 to bridge periods with low energy demand. For this purpose, underground gas storage (UGS) in salt caverns, deep aquifers and oil-/gas reservoirs has been proposed, which are environments with potentially high microbial abundance and activity. Subsurface microorganisms can use H2 in their metabolism and thus may lead to a variety of undesired side effects such as H2 loss, H2S formation, methane formation, acid formation, clogging and corrosion. In this review, we summarize the current knowledge and methodologies on microbial related risks related to H2 UGS, including basic research on subsurface microbiology, results from field trials, and experience from other industries including oil \& gas. For safe underground storage of H2 gas we recommend to analyze the relevant microbiological and geochemical characteristics of each site to be able to predict the most suitable storage strategy and establish a good monitoring and mitigation approach to follow and counter potential microbial side effects.},
+	language = {en},
+	urldate = {2021-01-07},
+	journal = {International Journal of Hydrogen Energy},
+	author = {Dopffel, Nicole and Jansen, Stefan and Gerritse, Jan},
+	month = jan,
+	year = {2021},
+	keywords = {Hydrogen underground storage, Microbial monitoring, Microbial risk assessment},
+	file = {ScienceDirect Snapshot:/home/ali/Zotero/storage/8WBNNI3F/S0360319920345936.html:text/html}
 }
