--- a/software/docs/docs.lyx
+++ b/software/docs/docs.lyx
@@ -350,6 +350,40 @@ ty (i.e.
 \end_layout
 
 \begin_layout Section
+Methanation reactor
+\end_layout
+
+\begin_layout Standard
+Carbon dioxide can be reduced to methane via Sabatier reaction, that reads
+\begin_inset Formula 
+\[
+CO2+4H2\rightleftarrows CH_{4}+2H_{2}O\qquad\Delta H_{0}=-165\,\textrm{kJ/mol}.
+\]
+
+\end_inset
+
+This reaction can be a pathway to sustainable fuel if the carbon dioxide
+ can be extracted from the atmosphere and hydrogen can be provided from
+ the electrolysis of water driven by renewable electricity.
+ The reaction can be catalyzed by nickel or ruthenium and can be conducted
+ in a packed bed reactor.
+ The reaction rate in different ranges of pressure and temperature are reported
+ in the literature.
+ Although other reactions can occur at the high temperature and pressure
+ of the methanations reactors, it is observed that the selectivity of the
+ reaction towards methane is high 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "loder_reaction_2020"
+literal "false"
+
+\end_inset
+
+.
+ 
+\end_layout
+
+\begin_layout Section
 Analytical solution of gas storage
 \end_layout
 
@@ -563,6 +597,42 @@ This function can be approximated to
 \end_inset
 
 which is a suitable approximation for the calculation of well pressure.
+\end_layout
+
+\begin_layout Section
+Not yet thrown away
+\end_layout
+
+\begin_layout Standard
+Most of the measurements are done at lower peressures in the context of
+ the conversion of Mars atmosphere to water and methane.
+ Phung et al.
+ 
+\begin_inset CommandInset citation
+LatexCommand cite
+key "quach_kinetics_1976"
+literal "false"
+
+\end_inset
+
+ reported the reaction rate of CO
+\begin_inset Formula $_{2}$
+\end_inset
+
+ and H
+\begin_inset Formula $_{2}$
+\end_inset
+
+ over a surface coated ruthenium catalysts in a stirred tank reactor, which
+ reads in the form of a Hougen-Watson rate equation:
+\begin_inset Formula 
+\begin{equation}
+r=\frac{k_{s}K_{c}K_{h}^{4}p_{c}p_{h}^{4}}{\left(1+K_{c}p_{c}+K_{h}p_{h}\right)^{5}}\label{eq:co2-meth-quach}
+\end{equation}
+
+\end_inset
+
+
 \end_layout
 
 \begin_layout Section
