--- a/software/docs/energy_storage.bib
+++ b/software/docs/energy_storage.bib
@@ -1460,6 +1460,52 @@ In this thesis, the thermodynamics and electrochemistry associated with water el
 	author = {Dopffel, Nicole and Jansen, Stefan and Gerritse, Jan},
 	month = jan,
 	year = {2021},
-	keywords = {Hydrogen underground storage, Microbial monitoring, Microbial risk assessment},
+	keywords = {Microbial monitoring, Hydrogen underground storage, Microbial risk assessment},
 	file = {ScienceDirect Snapshot:/home/ali/Zotero/storage/8WBNNI3F/S0360319920345936.html:text/html}
+}
+
+@incollection{barbarossa_co_2013,
+	title = {{CO} 2 conversion to {CH} 4},
+	booktitle = {{CO2}: {A} {Valuable} {Source} of {Carbon}},
+	publisher = {Springer},
+	author = {Barbarossa, V. and Bassano, C. and Deiana, P. and Vanga, G.},
+	year = {2013},
+	pages = {123--145},
+	file = {Snapshot:/home/ali/Zotero/storage/KH5HQ74A/978-1-4471-5119-7_8.html:text/html}
+}
+
+@inproceedings{barbarossa_methanation_2011,
+	title = {Methanation of carbon dioxide},
+	booktitle = {{XXXIV} {Meeting} of the {Italian} section of the {Combustion} {Institute}–{Roma}},
+	author = {Barbarossa, V. and Vanga, G.},
+	year = {2011}
+}
+
+@article{barbarossa_co2_2014,
+	title = {{CO2} as carbon source for fuel synthesis},
+	volume = {45},
+	journal = {Energy Procedia},
+	author = {Barbarossa, Vincenzo and Vanga, Giuseppina and Viscardi, Rosanna and Gattia, Daniele Mirabile},
+	year = {2014},
+	note = {Publisher: Elsevier},
+	pages = {1325--1329},
+	file = {Barbarossa et al_2014_CO2 as carbon source for fuel synthesis.pdf:/home/ali/Dropbox/Zotero/Barbarossa et al_2014_CO2 as carbon source for fuel synthesis.pdf:application/pdf}
+}
+
+@inproceedings{barbarossa_co2_2013,
+	address = {London},
+	series = {Green {Energy} and {Technology}},
+	title = {{CO2} {Conversion} to {CH4}},
+	isbn = {978-1-4471-5119-7},
+	doi = {10.1007/978-1-4471-5119-7_8},
+	abstract = {Methanation is an alternative route to treat CO2, which allows the enhancement of carbon in the molecule, through its conversion to methane. A very wide catalytic system is available to operate the transformation. A review of the materials and their performances is presented together with some industrial applications. These technologies are useful methods to store energy as chemical energy.},
+	language = {en},
+	booktitle = {{CO2}: {A} {Valuable} {Source} of {Carbon}},
+	publisher = {Springer},
+	author = {Barbarossa, V. and Bassano, C. and Deiana, P. and Vanga, G.},
+	editor = {Falco, Marcello De and Iaquaniello, Gaetano and Centi, Gabriele},
+	year = {2013},
+	keywords = {CH4, CO2 hydrogenation, Industrial processes for SNG, Ni-based catalyst, Sabatier reaction},
+	pages = {123--145},
+	file = {Barbarossa et al_2013_CO2 Conversion to CH4.pdf:/home/ali/Dropbox/Zotero/Barbarossa et al_2013_CO2 Conversion to CH4.pdf:application/pdf}
 }
